Manage open streams in correct way
All open streams must be closed, we can use try-with-resources